[package]
name = "use-color"
description = "Composable primitive color utilities for Rust."
publish = true
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
readme = "README.md"
documentation = "https://docs.rs/use-color"
keywords = ["color", "rgb", "hex", "palette", "graphics"]
categories = ["graphics"]

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
